webapp/src/components/resizeable-grid/styles/grid.scss
@import '../../global-styles/vars';
@import 'grid-mixins';

$transitionTime: .25s;
$rippleTransitionTime: .35s;
$defaultTransformTransition: transform $transitionTime cubic-bezier(.76,.33,.76,.88);
.sw-resizeable-grid {
  @include size(100%, 100%);
  overflow: hidden;
  position: relative;

  @include flex(center, space-between);
  &.sw-reordering{
    .sw-resize-vertical,
    .sw-resize-horizontal {
      pointer-events: none;
    }
    .sw-grid-topbar{
      //display: none;
    }
  }
  &.sw-resizing {

    .sw-resizeable-row > .sw-row-content { // no pointer events for row-content
      //@include hide();
      display: none;
      pointer-events: none;
    }
  }

  .transition-ripple {
    position: absolute;
    z-index: 99999;
    right: 25px;
    top: 27px;
    transform: translate(50%, -50%) scale3d(0, 0, 0);
    background-color: $blue-60;
    border-radius: 50%;
    transition: $rippleTransitionTime cubic-bezier(.22,.49,.33,.94);
    will-change: transform;
  }

  .sw-resizeable-column {
    height: 100%;
    will-change: transform, z-index, width;
    position: relative;
    z-index: 1;

    display: flex;
    flex-direction: column;

    &.sw-collapsed-column { //vertical
      .sw-row-content {
        @include hide();
      }

      .sw-grid-topbar {
        @include size(100%, 100%);
        background-color: $deepBlue-5;
        border: 4px solid #FAFAFA;
        transition: .2s;

        &_content-title {
          margin: 0;
          padding-left: 2px;
          line-height: 1.4;
          opacity: .2;
          font-weight: 900;

          @include flex(center, center, column);
        }

        &:hover {
          background-color: $deepBlue-10;
          transition: .2s;
        }
      }
    }

    &:not(.sw-collapsed-column) { // Horizontal
      .sw-collapsed-row {

        .sw-row-content {
          @include hide();
        }

        .sw-grid-topbar {
          @include size(100%, 100%);
          background-color: $deepBlue-5;
          border: 4px solid #FAFAFA;
          transition: .2s;
          // background-color: green;

          &_content {
            width: 100%;

            &-title {
              width: 100%;
              margin: 0;
              padding-left: 2px;
              line-height: 1.4;
              opacity: .2;
              font-weight: 900;
              letter-spacing: 3px;

              @include flex(center, center);
            }
          }

          &:hover {
            background-color: $deepBlue-10;
            transition: .2s;
          }
        }
      }
    }
  }

  .sw-resizeable-row {
    @include size(100%, 100%);
    overflow: hidden;
    will-change: transform, z-index, height;
    position: relative;
    z-index: 1;

    display: flex;
    flex-direction: column;

    .sw-row-content {
      position: relative;
      @include size(100%, calc(100% - 50px));
    }
  }

  .sw-collapsing-overlay{
    background-color: $deepBlue-10;
    position: absolute;
    top: 0;
    z-index: 2;
    left: 0;
    @include size(100%, 100%);
    @include flex(center, center);
    flex-wrap: wrap;
    display: none;

    img {
      width: 50px;
      height: 50px;
      max-width: 90%;
      padding: 10px;
    }
  }
  .sw-resizing-overlay{
    background-color: green;
    position:absolute;
    top: 0;
    z-index:2;
    left: 0;
    @include size(100%, 100%);
    display: none;
  }
  &.sw-resizing{
    .sw-resizing-overlay{
      display:flex;
    }
  }
  .sw-resizing-collapsing-column{
    > .sw-collapsing-overlay{
      display: flex;
    }
  }
  .sw-resizing-collapsing-row{
    > .sw-resizing-overlay > .sw-collapsing-overlay{
      display: flex;
    }
  }

  .sw-resize-vertical {
    @include size(16px, 100%);
    position: absolute;
    left: calc(0px - 8px);
    top: 0;
    z-index: 3;
    transition: .1s calc(#{$transitionTime} - .2);

    &:after {
      content: "";
      position: absolute;
      top: 0;
      @include size(1px, 100%);
      left: 50%;
      transform: translateX(-50%);
      background-color: $deepBlue-10;
      cursor: col-resize;
      transition: .2s ease-in-out;
    }

    &:hover {

      &:after {
        width: 4px;
        transition: .2s ease-in-out;
      }
    }
  }

  .sw-resize-horizontal { // figure out how to do the trigger zones when we have rows
    @include size(100%, 16px);
    position: absolute;
    left: 0;
    top: calc(0px - 8px);
    z-index: 3;
    transition: .1s calc(#{$transitionTime} - .2);

    &:after {
      content: "";
      position: absolute;
      top: 50%;
      @include size(100%, 2px);
      left: 0;
      transform: translateY(-50%);
      transform-origin: 50% 50%;
      background-color: $deepBlue-10;
      cursor: row-resize;
      will-change: height;
      transition: .2s ease-in-out;
    }

    &:hover {

      &:after {
        transform-origin: 50% 50%;
        transform: translateY(-50%) scaleY(4);
        transition: .2s ease-in-out;
      }
    }
  }
}


@import "grid-topbar";
@import "grid-transitions";

